# gst-deepsort

./: CMakeLists.txt  README.md  deepsortplugin_lib.cpp  deepsortplugin_lib.h  gstdeepsortplugin.cpp  gstdeepsortplugin.h
